--- a/application/CohortManager/compose.data-services.yaml
+++ b/application/CohortManager/compose.data-services.yaml
@@ -4,14 +4,13 @@ services:
   exception-management-data-service:
     container_name: exception-management-data-service
     image: cohort-manager-exception-management-data-service
+    platform: "linux/amd64"
     ports:
       - 7911:7911
     networks: [cohman-network]
     build:
       context: ./src/Functions/
       dockerfile: screeningDataServices/ExceptionManagementDataService/Dockerfile
-      args:
-        PLATFORM_SUFFIX: ${PLATFORM_SUFFIX}
     environment:
       - ASPNETCORE_URLS=http://*:7911
       - DtOsDatabaseConnectionString=Server=db,1433;Database=${DB_NAME};User Id=SA;Password=${PASSWORD};TrustServerCertificate=True
@@ -20,12 +19,11 @@ services:
   bs-request-audit-data-service:
     container_name: bs-request-audit-data-service
     image: cohort-manager-bs-request-audit-data-service
+    platform: "linux/amd64"
     networks: [cohman-network]
     build:
       context: ./src/Functions/
       dockerfile: screeningDataServices/BsSelectRequestAudit/Dockerfile
-      args:
-        PLATFORM_SUFFIX: ${PLATFORM_SUFFIX}
     profiles: [bs-select]
     ports:
       - 7956:7956
@@ -37,12 +35,11 @@ services:
   screening-lkp-data-service:
     container_name: screening-lkp-data-service
     image: cohort-manager-screening-lkp-data-service
+    platform: "linux/amd64"
     networks: [cohman-network]
     build:
       context: ./src/Functions/
       dockerfile: screeningDataServices/ScreeningLkpDataService/Dockerfile
-      args:
-        PLATFORM_SUFFIX: ${PLATFORM_SUFFIX}
     environment:
       - ASPNETCORE_URLS=http://*:8996
       - DtOsDatabaseConnectionString=Server=db,1433;Database=${DB_NAME};User Id=SA;Password=${PASSWORD};TrustServerCertificate=True
@@ -51,13 +48,12 @@ services:
   gene-code-lkp-data-service:
     container_name: gene-code-lkp-data-service
     image: cohort-manager-gene-code-lkp-data-service
+    platform: "linux/amd64"
     networks: [cohman-network]
     profiles: [not-implemented]
     build:
       context: ./src/Functions/
       dockerfile: screeningDataServices/GeneCodeLkpDataService/Dockerfile
-      args:
-        PLATFORM_SUFFIX: ${PLATFORM_SUFFIX}
     environment:
       - ASPNETCORE_URLS=http://*:7991
       - DtOsDatabaseConnectionString=Server=db,1433;Database=${DB_NAME};User Id=SA;Password=${PASSWORD};TrustServerCertificate=True
@@ -66,12 +62,11 @@ services:
   higher-risk-referral-reason-lkp-data-service:
     container_name: higher-risk-referral-reason-lkp-data-service
     image: cohort-manager-higher-risk-referral-reason-lkp-data-service
+    platform: "linux/amd64"
     networks: [cohman-network]
     build:
       context: ./src/Functions/
       dockerfile: screeningDataServices/HigherRiskReferralReasonLkpDataService/Dockerfile
-      args:
-        PLATFORM_SUFFIX: ${PLATFORM_SUFFIX}
     profiles: [not-implemented]
     environment:
       - ASPNETCORE_URLS=http://*:7992
@@ -81,14 +76,13 @@ services:
   participant-demographic-data-service:
     container_name: participant-demographic-data-service
     image: cohort-manager-participant-demographic-data-service
+    platform: "linux/amd64"
     ports:
       - 7993:7993
     networks: [cohman-network]
     build:
       context: ./src/Functions/
       dockerfile: screeningDataServices/ParticipantDemographicDataService/Dockerfile
-      args:
-        PLATFORM_SUFFIX: ${PLATFORM_SUFFIX}
     environment:
       - ASPNETCORE_URLS=http://*:7993
       - DtOsDatabaseConnectionString=Server=db,1433;Database=${DB_NAME};User Id=SA;Password=${PASSWORD};TrustServerCertificate=True
@@ -97,14 +91,13 @@ services:
   participant-management-data-service:
     container_name: participant-management-data-service
     image: cohort-manager-participant-management-data-service
+    platform: "linux/amd64"
     ports:
       - 7994:7994
     networks: [cohman-network]
     build:
       context: ./src/Functions/
       dockerfile: screeningDataServices/ParticipantManagementDataService/Dockerfile
-      args:
-        PLATFORM_SUFFIX: ${PLATFORM_SUFFIX}
     environment:
       - ASPNETCORE_URLS=http://*:7994
       - DtOsDatabaseConnectionString=Server=db,1433;Database=${DB_NAME};User Id=SA;Password=${PASSWORD};TrustServerCertificate=True
@@ -113,14 +106,13 @@ services:
   cohort-distribution-data-service:
     container_name: cohort-distribution-data-service
     image: cohort-manager-cohort-distribution-data-service
+    platform: "linux/amd64"
     ports:
       - 7992:7992
     networks: [cohman-network]
     build:
       context: ./src/Functions/
       dockerfile: screeningDataServices/CohortDistributionDataService/Dockerfile
-      args:
-        PLATFORM_SUFFIX: ${PLATFORM_SUFFIX}
     environment:
       - ASPNETCORE_URLS=http://*:7992
       - DtOsDatabaseConnectionString=Server=db,1433;Database=${DB_NAME};User Id=SA;Password=${PASSWORD};TrustServerCertificate=True
@@ -129,13 +121,12 @@ services:
   nems-subscription-data-service:
     container_name: nems-subscription-data-service
     image: cohort-manager-nems-subscription-data-service
+    platform: "linux/amd64"
     networks: [cohman-network]
     profiles: [nems]
     build:
       context: ./src/Functions/
       dockerfile: screeningDataServices/NemsSubscriptionDataService/Dockerfile
-      args:
-        PLATFORM_SUFFIX: ${PLATFORM_SUFFIX}
     environment:
       - ASPNETCORE_URLS=http://*:7990
       - DtOsDatabaseConnectionString=Server=db,1433;Database=${DB_NAME};User Id=SA;Password=${PASSWORD};TrustServerCertificate=True
@@ -144,12 +135,11 @@ services:
   reference-data-service:
     container_name: reference-data-service
     image: cohort-manager-reference-data-service
+    platform: "linux/amd64"
     networks: [cohman-network]
     build:
       context: ./src/Functions/
       dockerfile: screeningDataServices/ReferenceDataService/Dockerfile
-      args:
-        PLATFORM_SUFFIX: ${PLATFORM_SUFFIX}
     environment:
       - ASPNETCORE_URLS=http://*:7988
       - DtOsDatabaseConnectionString=Server=db,1433;Database=${DB_NAME};User Id=SA;Password=${PASSWORD};TrustServerCertificate=True
@@ -158,13 +148,12 @@ services:
   servicenow-cases-data-service:
      container_name: servicenow-cases-data-service
      image: cohort-manager-servicenow-cases-data-service
+     platform: "linux/amd64"
      networks: [cohman-network]
      profiles: [service-now]
      build:
        context: ./src/Functions/
        dockerfile: screeningDataServices/ServiceNowCasesDataService/Dockerfile
-       args:
-         PLATFORM_SUFFIX: ${PLATFORM_SUFFIX}
      environment:
        - ASPNETCORE_URLS=http://*:9996
        - DtOsDatabaseConnectionString=Server=db,1433;Database=${DB_NAME};User Id=SA;Password=${PASSWORD};TrustServerCertificate=True
