--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -27,7 +27,7 @@
       "label": "Spin up Docker for E2E regression (build + start)",
       "type": "shell",
       "osx": {
-        "command": "PLATFORM_SUFFIX='--platform=linux/amd64 ' PLATFORM_OVERRIDE=linux/amd64 podman compose down && PLATFORM_SUFFIX='--platform=linux/amd64 ' PLATFORM_OVERRIDE=linux/amd64 podman compose -f compose.core.yaml -f compose.core.platform.override.yaml build && PLATFORM_SUFFIX='--platform=linux/amd64 ' PLATFORM_OVERRIDE=linux/amd64 podman compose -f compose.cohort-distribution.yaml -f compose.cohort-distribution.platform.override.yaml build && PLATFORM_SUFFIX='--platform=linux/amd64 ' PLATFORM_OVERRIDE=linux/amd64 podman compose -f compose.data-services.yaml -f compose.data-services.platform.override.yaml build && PLATFORM_SUFFIX='--platform=linux/amd64 ' PLATFORM_OVERRIDE=linux/amd64 podman compose -f compose.deps.yaml up -d && (PLATFORM_SUFFIX='--platform=linux/amd64 ' PLATFORM_OVERRIDE=linux/amd64 podman compose -f compose.deps.yaml up --build db-migration || true) && (PLATFORM_SUFFIX='--platform=linux/amd64 ' PLATFORM_OVERRIDE=linux/amd64 podman compose -f compose.deps.yaml rm -f db-migration || true) && PLATFORM_SUFFIX='--platform=linux/amd64 ' PLATFORM_OVERRIDE=linux/amd64 podman compose down && PLATFORM_SUFFIX='--platform=linux/amd64 ' PLATFORM_OVERRIDE=linux/amd64 podman compose --profile \"service-now\" --profile \"bs-select\" --profile \"non-essential\" up -d"
+        "command": "podman compose down && podman compose -f compose.core.yaml build && podman compose -f compose.cohort-distribution.yaml build && podman compose -f compose.data-services.yaml build && podman compose -f compose.deps.yaml up -d && (podman compose -f compose.deps.yaml up --build db-migration || true) && (podman compose -f compose.deps.yaml rm -f db-migration || true) && podman compose down && podman compose --profile \"service-now\" --profile \"bs-select\" --profile \"non-essential\" up -d"
       },
       "windows": {
         "command": "docker compose down && docker compose -f compose.core.yaml build && docker compose -f compose.cohort-distribution.yaml build && docker compose -f compose.data-services.yaml build && docker compose -f compose.deps.yaml up -d && (docker compose -f compose.deps.yaml up --build db-migration || true) && (docker compose -f compose.deps.yaml rm -f db-migration || true) && docker compose down && docker compose --profile \"service-now\" --profile \"bs-select\" --profile \"non-essential\" up -d",
@@ -69,7 +69,7 @@
       "label": "Build applciation in docker",
       "type": "shell",
       "osx": {
-        "command": "PLATFORM_SUFFIX='--platform=linux/amd64 ' PLATFORM_OVERRIDE=linux/amd64 podman compose down && PLATFORM_SUFFIX='--platform=linux/amd64 ' PLATFORM_OVERRIDE=linux/amd64 podman compose -f compose.core.yaml -f compose.core.platform.override.yaml build && PLATFORM_SUFFIX='--platform=linux/amd64 ' PLATFORM_OVERRIDE=linux/amd64 podman compose -f compose.cohort-distribution.yaml -f compose.cohort-distribution.platform.override.yaml build && PLATFORM_SUFFIX='--platform=linux/amd64 ' PLATFORM_OVERRIDE=linux/amd64 podman compose -f compose.data-services.yaml -f compose.data-services.platform.override.yaml build"
+        "command": "podman compose down && podman compose -f compose.core.yaml build && podman compose -f compose.cohort-distribution.yaml build && podman compose -f compose.data-services.yaml build"
       },
       "windows": {
         "command": "docker compose down && docker compose -f compose.core.yaml build && docker compose -f compose.cohort-distribution.yaml build && docker compose -f compose.data-services.yaml build",
@@ -138,7 +138,7 @@
       "label": "Build whole application (incl. non-essential services)",
       "type": "shell",
       "osx": {
-        "command": "PLATFORM_SUFFIX='--platform=linux/amd64 ' PLATFORM_OVERRIDE=linux/amd64 podman compose down && PLATFORM_SUFFIX='--platform=linux/amd64 ' PLATFORM_OVERRIDE=linux/amd64 podman compose -f compose.core.yaml -f compose.core.platform.override.yaml --profile \"*\" build && PLATFORM_SUFFIX='--platform=linux/amd64 ' PLATFORM_OVERRIDE=linux/amd64 podman compose -f compose.cohort-distribution.yaml -f compose.cohort-distribution.platform.override.yaml --profile \"*\" build && PLATFORM_SUFFIX='--platform=linux/amd64 ' PLATFORM_OVERRIDE=linux/amd64 podman compose -f compose.data-services.yaml -f compose.data-services.platform.override.yaml --profile \"*\" build"
+        "command": "podman compose down && podman compose -f compose.core.yaml --profile \"*\" build && podman compose -f compose.cohort-distribution.yaml --profile \"*\" build && podman compose -f compose.data-services.yaml --profile \"*\" build"
       },
       "windows": {
         "command": "docker compose down && docker compose -f compose.core.yaml --profile \"*\" build && docker compose -f compose.cohort-distribution.yaml --profile \"*\" build && docker compose -f compose.data-services.yaml --profile \"*\" build",
