--- a/application/CohortManager/src/Functions/NemsSubscriptionService/ProcessNemsUpdate/Dockerfile
+++ b/application/CohortManager/src/Functions/NemsSubscriptionService/ProcessNemsUpdate/Dockerfile
@@ -1,4 +1,3 @@
-ARG PLATFORM_SUFFIX
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS base
 
 COPY ./Shared /Shared
@@ -22,8 +21,8 @@ RUN --mount=type=cache,target=/root/.nuget/packages \
     dotnet publish ./*.csproj --output /home/site/wwwroot
 
 # To enable ssh & remote debugging on app service change the base image to the one below
-# FROM ${PLATFORM_SUFFIX}mcr.microsoft.com/azure-functions/dotnet-isolated:4-dotnet-isolated8.0-appservice
-FROM ${PLATFORM_SUFFIX}mcr.microsoft.com/azure-functions/dotnet-isolated:4-dotnet-isolated8.0
+# FROM mcr.microsoft.com/azure-functions/dotnet-isolated:4-dotnet-isolated8.0-appservice
+FROM --platform=linux/amd64 mcr.microsoft.com/azure-functions/dotnet-isolated:4-dotnet-isolated8.0
 ENV AzureWebJobsScriptRoot=/home/site/wwwroot \
     AzureFunctionsJobHost__Logging__Console__IsEnabled=true
 
