--- a/application/CohortManager/src/Functions/screeningDataServices/ServiceNowCasesDataService/Dockerfile
+++ b/application/CohortManager/src/Functions/screeningDataServices/ServiceNowCasesDataService/Dockerfile
@@ -1,4 +1,3 @@
-ARG PLATFORM_SUFFIX
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS base
 
 COPY ./Shared /Shared
@@ -21,8 +20,8 @@ WORKDIR /src/dotnet-function-app
 RUN dotnet publish ./*.csproj --output /home/site/wwwroot
 
 # To enable ssh & remote debugging on app service change the base image to the one below
-# FROM ${PLATFORM_SUFFIX}mcr.microsoft.com/azure-functions/dotnet-isolated:4-dotnet-isolated8.0-appservice
-FROM ${PLATFORM_SUFFIX}mcr.microsoft.com/azure-functions/dotnet-isolated:4-dotnet-isolated8.0
+# FROM mcr.microsoft.com/azure-functions/dotnet-isolated:4-dotnet-isolated8.0-appservice
+FROM --platform=linux/amd64 mcr.microsoft.com/azure-functions/dotnet-isolated:4-dotnet-isolated8.0
 ENV AzureWebJobsScriptRoot=/home/site/wwwroot \
     AzureFunctionsJobHost__Logging__Console__IsEnabled=true
 
