--- a/.azuredevops/templates/cd-infrastructure-core-common.yaml
+++ b/.azuredevops/templates/cd-infrastructure-core-common.yaml
@@ -49,6 +49,8 @@ stages:
 
 - stage: terraform_deploy
   displayName: Terraform Deploy
+  dependsOn:
+  - re_tag_stage
   condition: | 
     and(
       eq(variables['Build.Reason'], 'Manual'),
