Revert "fix: added mac fixes for docker + QoL improvements for running automation tests locally"
This reverts commit cce132653871d235ab1e513aab1f5ad46741b969.

--- a/application/CohortManager/src/Functions/NemsSubscriptionService/ProcessNemsUpdate/Dockerfile
+++ b/application/CohortManager/src/Functions/NemsSubscriptionService/ProcessNemsUpdate/Dockerfile
@@ -22,7 +22,7 @@ RUN --mount=type=cache,target=/root/.nuget/packages \
 
 # To enable ssh & remote debugging on app service change the base image to the one below
 # FROM mcr.microsoft.com/azure-functions/dotnet-isolated:4-dotnet-isolated8.0-appservice
-FROM --platform=linux/amd64 mcr.microsoft.com/azure-functions/dotnet-isolated:4-dotnet-isolated8.0
+FROM mcr.microsoft.com/azure-functions/dotnet-isolated:4-dotnet-isolated8.0
 ENV AzureWebJobsScriptRoot=/home/site/wwwroot \
     AzureFunctionsJobHost__Logging__Console__IsEnabled=true
 
