--- a/application/CohortManager/src/Functions/screeningDataServices/ServiceNowCasesDataService/Dockerfile
+++ b/application/CohortManager/src/Functions/screeningDataServices/ServiceNowCasesDataService/Dockerfile
@@ -21,7 +21,7 @@ RUN dotnet publish ./*.csproj --output /home/site/wwwroot
 
 # To enable ssh & remote debugging on app service change the base image to the one below
 # FROM mcr.microsoft.com/azure-functions/dotnet-isolated:4-dotnet-isolated8.0-appservice
-FROM --platform=linux/amd64 mcr.microsoft.com/azure-functions/dotnet-isolated:4-dotnet-isolated8.0
+FROM mcr.microsoft.com/azure-functions/dotnet-isolated:4-dotnet-isolated8.0
 ENV AzureWebJobsScriptRoot=/home/site/wwwroot \
     AzureFunctionsJobHost__Logging__Console__IsEnabled=true
 
