--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -5,7 +5,7 @@
       "label": "Restart dependencies",
       "type": "shell",
       "osx": {
-        "command": "podman compose -f compose.deps.yaml down && podman compose -f compose.deps.yaml up --no-build"
+        "command": "podman compose -f compose.deps.yaml down && podman compose -f compose.deps.yaml up"
       },
       "windows": {
         "command": "docker compose -f compose.deps.yaml down && docker compose -f compose.deps.yaml up",
@@ -27,7 +27,7 @@
       "label": "Restart application",
       "type": "shell",
       "osx": {
-        "command": "podman compose down && podman compose up --no-build"
+        "command": "podman compose down && podman compose up"
       },
       "windows": {
         "command": "docker compose down && docker compose up",
@@ -74,7 +74,7 @@
       "label": "Run DB Migrations",
       "type": "shell",
       "osx": {
-        "command": "bash ../../scripts/podman/amd64-build-from-compose.sh compose.deps.yaml && podman compose -f compose.deps.yaml up db-migration --no-build"
+        "command": "bash ../../scripts/podman/amd64-build-from-compose.sh compose.deps.yaml && podman compose -f compose.deps.yaml up db-migration"
       },
       "windows": {
         "command": "docker compose -f compose.deps.yaml down db-migration && docker compose -f compose.deps.yaml build db-migration && docker compose -f compose.deps.yaml up db-migration",
@@ -96,7 +96,7 @@
       "label": "Restart whole application (incl. non-essential services)",
       "type": "shell",
       "osx": {
-        "command": "podman compose --profile \"*\" down && podman compose --profile \"*\" up --no-build"
+        "command": "podman compose --profile \"*\" down && podman compose --profile \"*\" up"
       },
       "windows": {
         "command": "docker compose --profile \"*\" down && docker compose --profile \"*\" up",
