test: Rule 45 Playwright Tests (#1400)
* test: Base test class for rule45

* test: Add incomplete playwright tests

* test: Playwright tests for Rule 45

* fix: Fixed unit tests

* fix: 1 test

* test: Add annotations to tests

* fix: Update tests as 3601 has been removed

* fix: Tests

* chore: Update rule

* chore: Fix

* chore: Remove unused variable

--- a/application/CohortManager/src/Functions/ScreeningValidationService/LookupValidation/Breast_Screening_lookupRules.json
+++ b/application/CohortManager/src/Functions/ScreeningValidationService/LookupValidation/Breast_Screening_lookupRules.json
@@ -33,18 +33,14 @@
           },
           {
             "Name": "InvalidPostingCategory",
-            "Expression": "!(EnglishPostingCategory || new[] {\"ENG\", \"DMS\", \"IM\"}.Contains(newParticipant.CurrentPosting))"
+            "Expression": "!(EnglishPostingCategory || newParticipant.CurrentPosting == \"ENG\" || newParticipant.CurrentPosting == \"IM\" || newParticipant.CurrentPosting == \"DMS\")"
           },
-          {
-            "Name": "PrimaryCareExists",
-            "Expression": "dbLookup.CheckIfPrimaryCareProviderExists(newParticipant.PrimaryCareProvider)"
-          }, 
           {
             "Name": "IsExcluded",
             "Expression": "dbLookup.CheckIfPrimaryCareProviderInExcludedSmuList(newParticipant.PrimaryCareProvider)"
           }
         ],
-        "Expression": "(InvalidPostingCategory || string.IsNullOrEmpty(newParticipant.PrimaryCareProvider) || PrimaryCareExists || IsExcluded)",
+        "Expression": "(InvalidPostingCategory || ValidPrimaryCareProvider || IsExcluded)",
         "Actions": {
           "OnFailure": {
             "Name": "OutputExpression",
