test: Add playwright tests for rule 8

--- a/application/CohortManager/src/Functions/ScreeningValidationService/LookupValidation/Breast_Screening_lookupRules.json
+++ b/application/CohortManager/src/Functions/ScreeningValidationService/LookupValidation/Breast_Screening_lookupRules.json
@@ -25,18 +25,6 @@
         }
       },
       {
-        "RuleName": "3601.ValidatePrimaryCareProvider.BSSelect.NonFatal",
-        "Expression": "ValidPrimaryCareProvider",
-        "Actions": {
-          "OnFailure": {
-            "Name": "OutputExpression",
-            "Context": {
-              "Expression": "\"Invalid primary care provider GP practice code\""
-            }
-          }
-        }
-      },
-      {
         "RuleName": "45.GPPracticeCodeDoesNotExist.BSSelect.NonFatal",
         "LocalParams": [
           {
@@ -45,18 +33,18 @@
           },
           {
             "Name": "InvalidPostingCategory",
-            "Expression": "!(EnglishPostingCategory || new[] {\"ENG\", \"DMS\", \"IM\"}.Contains(newParticipant.CurrentPosting))"
+            "Expression": "!(EnglishPostingCategory || newParticipant.CurrentPosting == \"ENG\" || newParticipant.CurrentPosting == \"IM\" || newParticipant.CurrentPosting == \"DMS\")"
           },
           {
             "Name": "PrimaryCareExists",
             "Expression": "dbLookup.CheckIfPrimaryCareProviderExists(newParticipant.PrimaryCareProvider)"
-          }, 
+          },
           {
             "Name": "IsExcluded",
             "Expression": "dbLookup.CheckIfPrimaryCareProviderInExcludedSmuList(newParticipant.PrimaryCareProvider)"
           }
         ],
-        "Expression": "(InvalidPostingCategory || string.IsNullOrEmpty(newParticipant.PrimaryCareProvider) || PrimaryCareExists || IsExcluded)",
+        "Expression": "(InvalidPostingCategory || ValidPrimaryCareProvider || IsExcluded)",
         "Actions": {
           "OnFailure": {
             "Name": "OutputExpression",
@@ -88,36 +76,6 @@
           }
         ],
         "Expression": "!(reasonForRemoval AND postcode AND primaryCareProvider)"
-      },
-      {
-        "RuleName": "51.ParticipantLocationRemainingOutsideOfCohort.ParticipantLocationRemainingOutsideOfCohort.NonFatal",
-        "LocalParams": [
-          {
-            "Name": "ExistingParticipantInDMS",
-            "Expression": "(!string.IsNullOrEmpty(existingParticipant.CurrentPosting) AND  existingParticipant.CurrentPosting == \"DMS\" AND !string.IsNullOrEmpty(existingParticipant.PrimaryCareProvider) AND dbLookup.CheckIfPrimaryCareProviderInExcludedSmuList(existingParticipant.PrimaryCareProvider))"
-          },
-          {
-            "Name": "existingParticipantPosting",
-            "Expression": "ExistingParticipantInDMS OR (dbLookup.RetrievePostingCategory(existingParticipant.CurrentPosting) == \"WALES\")"
-          },
-          {
-            "Name": "NewParticipantInDMS",
-            "Expression": "(!string.IsNullOrEmpty(existingParticipant.CurrentPosting) AND  newParticipant.CurrentPosting == \"DMS\" AND !string.IsNullOrEmpty(newParticipant.PrimaryCareProvider) AND dbLookup.CheckIfPrimaryCareProviderInExcludedSmuList(newParticipant.PrimaryCareProvider))"
-          },
-          {
-            "Name": "newParticipantPosting",
-            "Expression": "NewParticipantInDMS OR (dbLookup.RetrievePostingCategory(newParticipant.CurrentPosting) == \"WALES\")"
-          }
-        ],
-        "Expression": "!(existingParticipantPosting AND newParticipantPosting)",
-        "Actions": {
-          "OnSuccess": {
-            "Name": "OutputExpression",
-            "Context": {
-              "Expression": "\"Resident in not included area in cohort moving to same or another area not included in cohort.\""
-            }
-          }
-        }
       }
     ]
   }
