--- a/.azuredevops/pipelines/post-deployment-tests-dev.yaml
+++ b/.azuredevops/pipelines/post-deployment-tests-dev.yaml
@@ -41,6 +41,8 @@ parameters:
       - regression_e2e_epic1Med
       - regression_e2e_epic2Med
       - regression_e2e_epic3Med
+      - regression_e2e_epic4c
+      - regression_e2e_epic4d      
 
 stages:
   - ${{ each testType in parameters.testTypes }}:
@@ -60,6 +62,10 @@ stages:
           dependsOn: regression_e2e_epic1Med_stage
         ${{ if eq(testType, 'regression_e2e_epic3Med') }}:
           dependsOn: regression_e2e_epic2Med_stage
+        ${{ if eq(testType, 'regression_e2e_epic4c') }}:
+          dependsOn: regression_e2e_epic3Med_stage
+        ${{ if eq(testType, 'regression_e2e_epic4d') }}:
+          dependsOn: regression_e2e_epic4c_stage
         condition: succeededOrFailed()
         variables:
           TARGET_ENVIRONMENT: ${{ parameters.destEnvironmentShortName }}
