feat: added stubbed version of ManageCaasSubscription function, same signature as ManageNemsSubscription.

--- a/application/CohortManager/.env.example
+++ b/application/CohortManager/.env.example
@@ -35,3 +35,8 @@ ENDPOINT_BS_SELECT_UPDATE_BLOCK_FLAG="" # "http://localhost:7026/"
 SERVICENOW_CLIENT_ID=
 SERVICENOW_CLIENT_SECRET=
 SERVICENOW_REFRESH_TOKEN=
+
+# CAAS Manage Subscription (local/dev overrides)
+# Optional overrides for CAAS mailbox IDs used by ManageCaasSubscription Subscribe stub
+CAAS_SUBSCRIBE_TO_MAILBOX=
+CAAS_SUBSCRIBE_FROM_MAILBOX=
