--- a/application/CohortManager/src/Functions/DemographicServices/ManageCaasSubscription/ManageCaasSubscription.csproj
+++ b/application/CohortManager/src/Functions/DemographicServices/ManageCaasSubscription/ManageCaasSubscription.csproj
@@ -27,5 +27,8 @@
   <ItemGroup>
     <ProjectReference Include="..\..\Shared\Common\Common.csproj" />
     <ProjectReference Include="..\..\Shared\HealthChecks\HealthChecks.csproj" />
+    <ProjectReference Include="..\..\Shared\Model\Model.csproj" />
+    <ProjectReference Include="..\..\Shared\DataServices.Core\DataServices.Core.csproj" />
+    <ProjectReference Include="..\..\Shared\DataServices.Database\DataServices.Database.csproj" />
   </ItemGroup>
 </Project>
