--- a/application/CohortManager/src/Web/.env.tests
+++ b/application/CohortManager/src/Web/.env.tests
@@ -1,6 +1,6 @@
 # Default
 NEXT_PUBLIC_BASE_URL=http://localhost:3000
-NODE_ENV=development
+APP_ENV=development
 SERVICE_NAME="Cohort Manager"
 
 # Next Auth
