--- a/.github/workflows/ci-ui-tests.yaml
+++ b/.github/workflows/ci-ui-tests.yaml
@@ -21,23 +21,28 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: "22"
+          node-version: "lts/*"
+          check-latest: true
           cache: "npm"
           cache-dependency-path: application/CohortManager/src/Web/package-lock.json
 
       - name: Install dependencies
         run: npm ci
 
+      - name: Run Unit tests
+        run: npm run test:unit
+
       - name: Install Playwright browsers
         run: npx playwright install --with-deps
 
-      - name: Start application and run tests
+      - name: Start application and run Regression tests
         env:
           AUTH_SECRET: ${{ secrets.AUTH_SECRET }}
           SERVICE_NAME: ${{ vars.SERVICE_NAME }}
           NEXTAUTH_URL: ${{ vars.NEXTAUTH_URL }}
           EXCEPTIONS_API_URL: ${{ vars.EXCEPTIONS_API_URL }}
           COHORT_MANAGER_RBAC_CODE: ${{ vars.COHORT_MANAGER_USERS }}
+          APP_ENV: ${{ vars.APP_ENV }}
         run: |
           # Start the app in background
           npm run dev:secure &
@@ -51,18 +56,15 @@ jobs:
           # Run the tests
           npm run test:e2e
 
-      - name: run epic 4a tests
+      - name: Run Epic 4A tests
         env:
           AUTH_SECRET: ${{ secrets.AUTH_SECRET }}
           SERVICE_NAME: ${{ vars.SERVICE_NAME }}
           NEXTAUTH_URL: ${{ vars.NEXTAUTH_URL }}
           EXCEPTIONS_API_URL: ${{ vars.EXCEPTIONS_API_URL }}
           COHORT_MANAGER_RBAC_CODE: ${{ vars.COHORT_MANAGER_USERS }}
-        run: |
-
-
-          # Run the tests
-          npm run test:e2e:epic_4a
+          APP_ENV: ${{ vars.APP_ENV }}
+        run: npm run test:e2e:epic_4a
 
       - name: Upload test results
         if: always()
