--- a/application/CohortManager/src/Web/package.json
+++ b/application/CohortManager/src/Web/package.json
@@ -7,13 +7,12 @@
     "dev:secure": "next dev --turbo --experimental-https",
     "build": "next build",
     "start": "next start",
-    "test": "pnpm run test:unit",
+    "test": "npm run test:unit",
     "test:unit": "jest",
     "test:unit:watch": "jest --watch",
     "test:unit:coverage": "jest --coverage",
     "test:e2e": "npx bddgen && npx playwright test --grep=\"@regression\"",
     "test:e2e:epic_4a": "npx bddgen && npx playwright test --grep=\" @epic_4a\"",
-    "test:e2e:ui": "playwright test --ui",
     "lint": "next lint"
   },
   "dependencies": {
