feat: trying to improve running speed of the retry code in e2e tests

--- a/.gitignore
+++ b/.gitignore
@@ -118,3 +118,4 @@ application/CohortManager/src/Functions/*.json
 !**/playwright-tests/src/tests/e2e/testFiles/**/*.json
 
 
+tests/.vscode/settings.json
