--- a/application/CohortManager/.env.example
+++ b/application/CohortManager/.env.example
@@ -18,6 +18,7 @@ CAASFOLDER_STORAGE_CONNECTION_STRING="" # Enter the connection string for azurit
 CONTAINER_NAME="" # Name of the container to be used in the test. Example: "inbound".
 E2E_TEST_FILES_PATH="" # Path to the end-to-end test files directory. Example: "e2e/testFiles".
 API_TEST_FILES_PATH="" # Path to the api test files directory. Example: "api/testFiles".
+WIREMOCK_URL=http://localhost:8080/__admin/requests
 
 # Data Service Endpoints to access the APIs built on top of the Entity Framework
 # For Local Development & testing, make sure these are mapped using ports option in compose.data-services.yaml
