--- a/application/CohortManager/compose.deps.yaml
+++ b/application/CohortManager/compose.deps.yaml
@@ -72,6 +72,16 @@ services:
       - SYS_PTRACE
     restart: "no"
 
+  wiremock:
+    container_name: wiremock
+    networks: [cohman-network]
+    image: wiremock/wiremock
+    ports:
+      - "8080:8080"
+    volumes:
+      - ./Set-up/wiremock/mappings:/home/wiremock/mappings
+    command: --verbose --root-dir /home/wiremock
+
 networks:
   cohman-network:
     name: cohman-network
