test: Fixed wiremock URLs in compose file

--- a/application/CohortManager/compose.core.yaml
+++ b/application/CohortManager/compose.core.yaml
@@ -320,9 +320,9 @@ services:
     profiles: [service-now]
     environment:
       - ASPNETCORE_URLS=http://*:9092
-      - ServiceNowRefreshAccessTokenUrl=https://wiremock.com/oauth_token.do
-      - ServiceNowUpdateUrl=https://wiremock.com/api/x_nhsd_intstation/nhs_integration/9c78f87c97912e10dd80f2df9153aff5/CohortCaseUpdate
-      - ServiceNowResolutionUrl=https://wiremock.com/api/x_nhsd_intstation/nhs_integration/9c78f87c97912e10dd80f2df9153aff5/CohortCaseResolution
+      - ServiceNowRefreshAccessTokenUrl=https://wiremock:8080/oauth_token.do
+      - ServiceNowUpdateUrl=https://wiremock:8080/api/x_nhsd_intstation/nhs_integration/9c78f87c97912e10dd80f2df9153aff5/CohortCaseUpdate
+      - ServiceNowResolutionUrl=https://wiremock:8080/api/x_nhsd_intstation/nhs_integration/9c78f87c97912e10dd80f2df9153aff5/CohortCaseResolution
       - ServiceNowGrantType=refresh_token
       - ServiceNowClientId=MockClientId-123
       - ServiceNowClientSecret=MockClientSecret-123
