chore: adding new config items to env example

--- a/application/CohortManager/.env.example
+++ b/application/CohortManager/.env.example
@@ -35,3 +35,6 @@ ENDPOINT_BS_SELECT_UPDATE_BLOCK_FLAG="" # "http://localhost:7026/"
 SERVICENOW_CLIENT_ID=
 SERVICENOW_CLIENT_SECRET=
 SERVICENOW_REFRESH_TOKEN=
+
+MAX_NUMBER_OF_RETRIES=""
+TIME_BETWEEN_RETRIES_IN_SECONDS=""
